
syntax = "proto3";
package wal;

option go_package = "github.com/odio4u/memstore/registry/wal/proto;wal";


enum Operation {
    OP_UNKNOWN = 0;
    OP_PUT_GATEWAY = 1;
    OP_PUT_AGENT = 2;
}


message WalRecord {
    Operation op = 1;

    GatewayPutRequest gateway = 2;  // optional
    AgentConnectionRequest agent = 3; // optional
}

message GatewayPutRequest {
    string region = 1;
    string gateway_ip = 2;
    string gateway_address = 3;
    int32 gateway_port = 4;
    Capacity capacity = 5;
    string gateway_id = 6;
    string verifiable_cred_hash = 7;
    int32 wss_port = 8;
}

message AgentConnectionRequest {
    string gateway_address = 1 ;
    string gateway_id = 2;
    string region = 3;
    string agent_domain = 4;
    string agent_id = 5;
    string verifiable_cred_hash = 6;
}

message Capacity {
    int32 cpu = 1;
    int32 memory = 2;
    int32 storage = 3;
    int32 bandwidth = 4;
}